# practice-agent

./: pyproject.toml
src/practice_agents/: __init__.py  chatbot.py
