[project]
name = "practice-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ersa rani", email = "ersarani955@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "chainlit>=2.6.2",
    "openai-agents>=0.2.3",
]

[project.scripts]
practice-agents = "practice_agents:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
